samples/_failures_safe/1761256997_0c5bde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ada85e00.c: In function ‘main’:
./samples/SAFE/__tmp_ada85e00.c:201:5: error: expected expression at end of input
  201 |     if (len ==
      |     ^~
./samples/SAFE/__tmp_ada85e00.c:201:5: error: expected declaration or statement at end of input
